@@ -5,6 +5,7 @@ import org.ddolib.modeling.Model;
 import org.ddolib.modeling.Solvers;
 
 import java.io.IOException;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 /**
@@ -30,7 +31,7 @@ import java.nio.file.Paths;
 public final class ALPAstarMain {
 
     public static void main(final String[] args) throws IOException {
-        final String fileStr = Paths.get("data", "alp", "alp_n50_r1_c2_std10_s0").toString();
+        final String fileStr = args.length == 0 ? Path.of("data", "alp", "alp_n50_r1_c2_std10_s0").toString() : args[0];
         final ALPProblem problem = new ALPProblem(fileStr);
         Model<ALPState> model = new Model<>() {
             @Override
