@@ -6,6 +6,7 @@ import org.ddolib.modeling.Problem;
 import org.ddolib.modeling.Solvers;
 
 import java.io.IOException;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public final class MCPAcsMain {
@@ -17,9 +18,8 @@ public final class MCPAcsMain {
      */
 
     public static void main(String[] args) throws IOException {
-
-        final String filename = Paths.get("data", "MCP", "mcp_5_2.txt").toString();
-        final MCPProblem problem = new MCPProblem(filename);
+        final String instance = args.length == 0 ? Path.of("data", "MCP", "mcp_5_2.txt").toString() : args[0];
+        final MCPProblem problem = new MCPProblem(instance);
         AcsModel<MCPState> model = new AcsModel<MCPState>() {
             @Override
             public Problem<MCPState> problem() {
